--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,6 @@ hs_err_pid*
 replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,kotlin
+/.gradle/
+/.idea/
+/gradle/
