--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 org-slf4j = "2.0.17"
 org-hexworks-zircon = "2020.2.0-RELEASE"
 ch-qos-logback = "1.5.18"
+com-github-gastalt-config = "0.35.7"
 
 [libraries]
 org-junit-jupiter-junit-jupiter-api = "org.junit.jupiter:junit-jupiter-api:5.12.2"
@@ -12,8 +13,11 @@ org-hexworks-zircon-zircon-jvm-swing = { module = "org.hexworks.zircon:zircon.jv
 org-slf4j-slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "org-slf4j" }
 org-yaml-snakeyaml = "org.yaml:snakeyaml:2.4"
 com-github-ben-manes-caffeine-caffeine = "com.github.ben-manes.caffeine:caffeine:3.2.0"
-ch-qos-logback-logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "ch-qos-logback"}
-ch-qos-logback-logback-core = { module = "ch.qos.logback:logback-core", version.ref = "ch-qos-logback"}
+ch-qos-logback-logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "ch-qos-logback" }
+ch-qos-logback-logback-core = { module = "ch.qos.logback:logback-core", version.ref = "ch-qos-logback" }
+com-github-gestalt-config-gestalt-core = { module = "com.github.gestalt-config:gestalt-core", version.ref = "com-github-gastalt-config" }
+com-github-gestalt-config-gestalt-kotlin = { module = "com.github.gestalt-config:gestalt-kotlin", version.ref = "com-github-gastalt-config" }
+com-github-gestalt-config-gestalt-yaml = { module = "com.github.gestalt-config:gestalt-yaml", version.ref = "com-github-gastalt-config" }
 
 [plugins]
 org-jetbrains-kotlin-jvm = "org.jetbrains.kotlin.jvm:2.2.0-RC"
